objects/View_Proposal_data__c.object
<CustomObject>
    <fields>
        <fullName>Electribbilloffset__c</fullName>
        <label>Electribbilloffset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electribbilloffsetremaining__c</fullName>
        <label>Electribbilloffsetremaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetSavings2__c</fullName>
        <label>NetSavings2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NetSavings__c</fullName>
        <label>NetSavings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLI_Module_Desc__c</fullName>
        <label>PLI Module Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>View Proposal data</relationshipLabel>
        <relationshipName>View_Proposal_data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>newenergymixsolar__c</fullName>
        <label>newenergymixsolar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newenergymixutility__c</fullName>
        <label>newenergymixutility</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propAItoMP__c</fullName>
        <label>propAItoMP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propCRDesc__c</fullName>
        <label>propCRDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propElectricBOminimumNewBill__c</fullName>
        <label>propElectricBOminimumNewBill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propIP__c</fullName>
        <label>propIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propInvCount2__c</fullName>
        <label>propInvCount2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propInvCount3__c</fullName>
        <label>propInvCount3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propInvCount4__c</fullName>
        <label>propInvCount4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propInvPLIDesc2__c</fullName>
        <label>propInvPLIDesc2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propInvPLIDesc3__c</fullName>
        <label>propInvPLIDesc3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propInvPLIDesc4__c</fullName>
        <label>propInvPLIDesc4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propMLP__c</fullName>
        <label>propMLP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propNewUtiBil__c</fullName>
        <label>propNewUtiBil</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propRembill__c</fullName>
        <label>propRembill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propSFYear__c</fullName>
        <label>propSFYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propSPCpKWH__c</fullName>
        <label>propSPCpKWH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>propTMCofE__c</fullName>
        <label>propTMCofE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>propUCperKWH__c</fullName>
        <label>propUCperKWH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>View Proposal data</label>
    <nameField>
        <label>View Proposal data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>View Proposal data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>